# pulseaudio-webos

./: README  configure.ac  meson.build  meson_options.txt  oss-pkg-info.yaml
doxygen/: meson.build
man/: pulse-client.conf.5.xml.in
palm/: open_system.pa  qemux86_asound.conf  qemux86_system.pa  qemux86_upstart-pulseaudio.conf  rpi_system.pa  starfish_asound.conf  starfish_system.pa  starfish_upstart-pulseaudio  starfish_upstart-pulseaudio.conf
src/: Makefile.am  map-file
src/daemon/: daemon-conf.c  daemon.conf.in  ltdl-bind-now.c  main.c  pulseaudio-system.conf
src/modules/: meson.build  module-palm-policy-default.h  module-palm-policy-tables-default.h  module-palm-policy-tables.h  module-palm-policy-util.c  module-palm-policy-util.h  module-palm-policy.c  module-palm-policy.h
src/modules/agc/: agc.h  meson.build  module-agc.c  webrtc-1.cc
src/modules/alsa/: alsa-ucm.h
src/modules/audio_post_process/: AudioPostProcess.c  AudioPostProcess.h  AudioPostProcessConfig.h  module-app-sink.c  module-app-sink.h
src/modules/bluetooth/: rtp.h
src/modules/drc/: module-drc.c  sndfilter.txt
src/modules/ecnr/: echo-cancel.h  hann.txt  lge_ecnr.c  lge_ecnr.cc  model_ecnr.tflite  (+2 more)
src/modules/ecnr/shecnr/: CMakeLists.txt  module_ecnr.cc  module_ecnr.h  module_ecnr_c.cc  module_ecnr_c.h
src/pulse/: client-conf.c  client-conf.h  client.conf.in  context.c  map-file  proplist.h  simple.c  simple.h
src/pulsecore/: core-util.c  cpu-arm.c  cpu-x86.c  fdsem.c  meson.build  mutex-posix.c  pstream.c  resampler.c  resampler.h  sink-input.c  sink.c  sink.h  source.h
(+441 files in other folders)
